[gd_scene load_steps=21 format=2]

[ext_resource path="res://cenariofrente.png" type="Texture" id=1]
[ext_resource path="res://cenariotras.png" type="Texture" id=2]
[ext_resource path="res://chao.tscn" type="PackedScene" id=3]
[ext_resource path="res://Alvo.tscn" type="PackedScene" id=4]
[ext_resource path="res://Main.gd" type="Script" id=5]
[ext_resource path="res://topo.tscn" type="PackedScene" id=6]
[ext_resource path="res://cao/rindo.png" type="Texture" id=7]
[ext_resource path="res://cao/captura.png" type="Texture" id=8]
[ext_resource path="res://PressStart2P.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://hud.png" type="Texture" id=10]
[ext_resource path="res://sons/cao_captura.wav" type="AudioStream" id=11]
[ext_resource path="res://sons/pato.wav" type="AudioStream" id=12]
[ext_resource path="res://sons/round.wav" type="AudioStream" id=13]
[ext_resource path="res://sons/cao_rindo.wav" type="AudioStream" id=14]
[ext_resource path="res://sons/colidiu.wav" type="AudioStream" id=15]
[ext_resource path="res://sons/flyaway.wav" type="AudioStream" id=16]

[sub_resource type="DynamicFont" id=4]
size = 19
outline_color = Color( 0.0666667, 0.0666667, 0.0666667, 1 )
font_data = ExtResource( 9 )

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("captura:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 389, 420 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("rindo:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 389, 426 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("captura:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("rindo:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=2]
resource_name = "captura"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("captura:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.2, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 389, 547 ), Vector2( 389, 426 ), Vector2( 389, 537 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("captura:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=3]
resource_name = "rindo"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("rindo:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.2, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 389, 547 ), Vector2( 389, 426 ), Vector2( 389, 547 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("rindo:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="Main" type="Node2D"]
script = ExtResource( 5 )

[node name="HUD" type="CanvasLayer" parent="."]

[node name="Sprite" type="Sprite" parent="HUD"]
position = Vector2( 392, 625 )
texture = ExtResource( 10 )

[node name="Label" type="Label" parent="HUD"]
margin_left = 352.0
margin_top = 598.0
margin_right = 431.0
margin_bottom = 653.0
custom_fonts/font = SubResource( 4 )
text = "000"
align = 1
valign = 1

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -1, 0 )
z_index = -3
texture = ExtResource( 2 )
centered = false

[node name="Sprite2" type="Sprite" parent="."]
z_index = 1
texture = ExtResource( 1 )
centered = false

[node name="Alvo" parent="." instance=ExtResource( 4 )]

[node name="gerapato" type="Timer" parent="."]
one_shot = true

[node name="espera" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="topo" parent="." instance=ExtResource( 6 )]
position = Vector2( 387, -100 )

[node name="chao" parent="." instance=ExtResource( 3 )]
position = Vector2( 384, 787 )

[node name="rindo" type="Sprite" parent="."]
visible = false
position = Vector2( 389, 426 )
texture = ExtResource( 7 )

[node name="captura" type="Sprite" parent="."]
visible = false
position = Vector2( 389, 420 )
texture = ExtResource( 8 )

[node name="cao" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/captura = SubResource( 2 )
anims/rindo = SubResource( 3 )

[node name="cao_captura" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 11 )

[node name="cao_rindo" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 14 )

[node name="colidiu" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 15 )

[node name="flyaway" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 16 )

[node name="pato" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 12 )

[node name="novo_turno" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 13 )

[connection signal="timeout" from="gerapato" to="." method="_on_gerapato_timeout"]
[connection signal="timeout" from="espera" to="." method="_on_espera_timeout"]
[connection signal="body_entered" from="topo" to="." method="_on_topo_body_entered"]
[connection signal="body_entered" from="chao" to="." method="_on_chao_body_entered"]
